<resources>
    <string name="app_name">PAM1-ATIVIDADE-LAYOUT</string>
    <string name="gasto">Tipo de Gasto</string>
    <string name="valor">Valor :</string>
    <string name="data">Data :</string>
    <string name="descricao">Descrição :</string>
    <string name="local">Local : </string>
    <string name="salvar">Salvar</string>
    <string name="selecione">Selecione</string>

    <string name="dataum">data 1</string>
    <string name="datadois">data 2</string>

    <string name="bum">b 1</string>
    <string name="bdois">b 2</string>
</resources>
